# blokus-online

./: .dockerignore  .env.example  .gitignore  202508171805.unitypackage  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DEPLOYMENT.md  Dockerfile  Dockerfile.cmake-compat  Dockerfile.cmake-module  Dockerfile.cmake-snap  Dockerfile.fallback  Dockerfile.protobuf-fix  Dockerfile.ubuntu-native  README.md  RELEASE-GUIDE.md  RELEASE_SECURITY_GUIDE.md  TODO_LIST.md  build-prod-fast.bat  build-prod-signed.bat  deploy.sh  diagnose_linker.ps1  docker-build.sh  docker-compose.example.yml  docker-compose.yml  generate-certificate.ps1  last_log.txt  last_logs.txt  migration-argon2-compatibility.sql  package-lock.json  package-release-signed.bat  package-release-web.bat  package-release.bat  package.json  pkg_init.ps1  run_dev.bat  run_dev_release.bat  run_session_test.bat  (+8 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: deploy.yml
append/: client-mobile.unitypackage
client/: CMakeLists.txt  app_icon.rc  main.cpp  resource.qrc
client-mobile/: 202508111432.unitypackage  BlokusMobileClient-v1.5.0_mapping.txt  CLAUDE.md  MIGRATION_PLAN.md  UI.txt  UNITY_SETUP_GUIDE.md  last_log.txt  parse_unity_images.py
client-mobile/ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  GooglePlayGameSettings.txt  GvhProjectSettings.xml  ProjectSettings.asset  QualitySettings.asset
client/config/: default.json
client/include/: AfkNotificationDialog.h  BGMManager.h  ClientBlock.h  ClientConfigManager.h  ClientLogic.h  ClientTypes.h  ClientVersion.h  GameBoard.h  GameRoomWindow.h  ImprovedBlockPalette.h  LobbyWindow.h  LoginWindow.h  NetworkClient.h  OidcAuthenticator.h  QtAdapter.h  ResponsiveUI.h  SoundManager.h  UserInfoDialog.h  UserSettingsDialog.h
client/include/common/: QtAdapter.h  Types.h
client/include/core/: Application.h
client/include/game/: Block.h  GameLogic.h
client/include/ui/: BlockPalette.h  GameBoard.h  GameRoomWindow.h  ImprovedBlockPalette.h  LobbyWindow.h  LoginWindow.h  MainWindow.h
client/src/: AfkNotificationDialog.cpp  BGMManager.cpp  Block.cpp  ClientConfigManager.cpp  ClientUtils.cpp  ClientVersion.cpp  GameBoard.cpp  GameRoomWindow.cpp  ImprovedBlockPalette.cpp  LobbyWindow.cpp  LoginWindow.cpp  NetworkClient.cpp  OidcAuthenticator.cpp  QtAdapter.cpp  ResponsiveUI.cpp  SoundManager.cpp  UserInfoDialog.cpp  UserSettingsDialog.cpp  main.cpp
client/src/common/: QtAdapter.cpp
client/src/game/: Block.cpp  GameLogic.cpp
client/src/ui/: BlockPalette.cpp  GameBoard.cpp  GameRoomWindow.cpp  ImprovedBlockPalette.cpp  LobbyWindow.cpp  LoginWindow.cpp  MainWindow.cpp
common/: CMakeLists.txt
common/include/: Block.h  GameLogic.h  Types.h  Utils.h
common/include/common/: GameLogic.h  Types.h
common/src/: Block.cpp  GameLogic.cpp  Utils.cpp
data/: download-logs.json  download-stats.json
database/: schema_info.md  single_player_schema_extension.md
nginx/: nginx.conf
notices/patch_notes/: patch_note_v2.0.0.md
notices/release_notes/: release_note_v2.0.0.md
oidc-auth-server/: .env.example  Dockerfile  README.md  package-lock.json  package.json  server.js
oidc-auth-server/config/: database.js  env.js  keys.js  logger.js  oidc.js  passport.js
oidc-auth-server/keys/: metadata.json  private.jwk  public.jwk
oidc-auth-server/routes/: admin.js  authorize.js  direct-auth.js  google-play-games-auth.js  introspect.js  jwks.js  manual-auth.js  mobile-auth.js  oauth.js  revocation.js  token.js  unity-editor-callback.js  well-known.js
oidc-auth-server/scripts/: create-test-user.js
proto/: CMakeLists.txt  auth.pb.cc  auth.pb.h  auth.proto  chat.pb.cc  chat.pb.h  chat.proto  common.pb.cc  common.pb.h  common.proto  common_ext.proto  error.pb.cc  error.pb.h  error.proto  game.pb.cc  game.pb.h  game.proto  lobby.pb.cc  lobby.pb.h  lobby.proto  message_wrapper.pb.cc  message_wrapper.pb.h  message_wrapper.proto  version.proto
scripts/: debug-build.sh  deploy.sh  fix-jwt-cpp.sh  init-ssl.sh  renew-ssl.sh  setup.sh
server/: CMakeLists.txt  main.cpp
server/core/: GameServer.h  Session.h
server/include/: AuthenticationService.h  ConfigManager.h  DatabaseManager.h  GameRoom.h  GameServer.h  JwtVerifier.h  MessageHandler.h  PlayerInfo.h  RoomManager.h  ServerTypes.h  ServerUtils.h  Session.h  UserManager.h  VersionManager.h
server/include/Handler/: MessageHandler.h  ProtocolHandler.h
server/include/Manager/: NetworkManager.h  RoomManager.h  UserManager.h
server/include/Service/: AuthenticationService.h  GameService.h
server/include/Util/: ServerUtils.h
server/include/common/: ServerTypes.h
server/include/core/: EventSystem.h  GameServer.h  Session.h
server/include/game/: GameRoom.h
server/include/manager/: ConfigManager.h  DatabaseManager.h  GameRoom.h
server/include/monitor/: MetricsCollector.h
server/include/security/: RateLimiter.h
server/include/util/: Logger.h  TimestampUtils.h
server/src/: AuthenticationService.cpp  ConfigManager.cpp  DatabaseManager.cpp  GameRoom.cpp  GameServer.cpp  JwtVerifier.cpp  MessageHandler.cpp  NetworkManager.cpp  PlayerInfo.cpp  RoomManager.cpp  ServerTypes.cpp  ServerUtils.cpp  Session.cpp  VersionManager.cpp  session.cpp
server/src/common/: ServerTypes.cpp
server/src/core/: GameServer.cpp  session.cpp
server/src/handler/: MessageHandler.cpp
server/src/manager/: ConfigManager.cpp  DatabaseManager.cpp  GameRoom.cpp  RoomManager.cpp
server/src/service/: AuthenticationService.cpp
single-player-api/: .env.example  .eslintrc.js  202508161116.unitypackage  Dockerfile  README.md  app.js  package-lock.json  package.json  server.js
sql/: 01-init-multiple-databases.sh  02-create-web-tables.sql  README.md
web/: .dockerignore  .env.example  Dockerfile  MISSING-OAUTH-KEYS.txt  README-OAUTH-SETUP.md  README-download.md  docker-entrypoint.sh  fix-database.sql  next.config.js  package-lock.json  package.json  tailwind.config.js  test-argon2-web.js  tsconfig.json  tsconfig.tsbuildinfo
web/prisma/: schema.prisma  (+1 more)
(+412 files in other folders)
